--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <!------------------------------Generate html by javascript---------------------------- -->
     <div class="note_contner">
     </div>
+    <footer id="footer"></footer>
   </div>
     <script src="index.js"></script>
   </body>
